column gap issue fixed

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,6 @@ body {
 
 input {
     display: block;
-    padding: 0.375rem 0;
     margin-bottom: 0;
     line-height: 1.5;
     color: #212529;
@@ -38,7 +37,7 @@ input:active, input:focus {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    gap: 10px;
+    gap: 0px 10px;    
     justify-content: space-between;
 }
 
